first cambios agregamos sitios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola Amiguitos, este es mi sitio web, soy el mejor perras
+        Hola Amiguitos, este es mi sitio web, el mejor de todos
     </p>
 </body>
 </html>
